<resources>
    <string name="app_name">Shopping App</string>
    <string name="todo">TODO</string>
    <string name="phonenumber">phonenumber</string>
    <string name="signin">SignIn</string>
    <string name="signup">SignUp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="already_have_an_account_login">Already have an account ?logIn</string>
    <string name="number">Number</string>
    <string name="LogIn">login</string>
    <string name="name">Name</string>
    <string name="dont_have_an_account_sign_up">Dont have an account sign Up</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="otp">otp</string>
</resources>